Upgrade Gradle Tooling API to 8.9